--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/PlatformBudgetInfos/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/PlatformBudgetInfos/Edit.cshtml
@@ -27,7 +27,7 @@
                     <td>@Html.DisplayFor(m => m.Platform.Name)</td>
                 </tr>
                 <tr>
-                    <td>@Html.LabelFor(m => m.MediaSpend)</td>
+                    <td>@Html.LabelFor(m => m.MediaSpend, "Budget (Media Spend)")</td>
                     <td>@Html.EditorFor(m => m.MediaSpend)</td>
                 </tr>
                 <tr>
