--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/PerformanceGrid.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/PerformanceGrid.cshtml
@@ -47,7 +47,7 @@
                         TotalRev: { type: 'number' },
                         Margin: { type: 'number' },
                         MarginPct: { type: 'number' },
-                        PlatformNames: { type: 'string' },
+                        Platform: { type: 'string' },
                         PctOfGoal: { type: 'number' },
                         Impressions: { type: 'number' },
                         Clicks: { type: 'number' },
@@ -96,7 +96,7 @@
                 { field: 'TotalRev', format: '{0:n2}', attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.TotalRev.sum, 'n2') #", footerAttributes: { style: "text-align:right" } },
                 { field: 'Margin', format: '{0:n2}', attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.Margin.sum, 'n2') #", footerAttributes: { style: "text-align:right" } },
                 { field: 'MarginPct', format: "{0:p}", attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.MarginPct.agg, 'p') #", footerAttributes: { style: "text-align:right" } },
-                { field: 'PlatformNames', title: 'Platforms' },
+                { field: 'Platform', title: 'Platforms' },
                 { field: 'PctOfGoal', title: '%Goal', width: 80, format: "{0:p}", attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.PctOfGoal.agg, 'p') #", footerAttributes: { style: "text-align:right" } },
                 { field: 'Impressions', format: "{0:n0}", attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.Impressions.sum, 'n0') #", footerAttributes: { style: "text-align:right" } },
                 { field: 'Clicks', format: "{0:n0}", attributes: { style: "text-align:right" }, footerTemplate: "#: kendo.toString(data.Clicks.sum, 'n0') #", footerAttributes: { style: "text-align:right" } },
