--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/CampStats/Spreadsheet.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/CampStats/Spreadsheet.cshtml
@@ -14,6 +14,7 @@
         var spreadsheet = $('#spreadsheet').data('kendoSpreadsheet');
         var sheet = spreadsheet.activeSheet();
         sheet.range('E:I').format('$#,0.00');
+        sheet.range('J:J').format('#,0.00%');
     });
 
     function SetupDataSourceAndSpreadsheet() {
