--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Shared/_LayoutTD.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Shared/_LayoutTD.cshtml
@@ -56,8 +56,8 @@ table th,td {
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Views <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="@Url.Action("PacingGrid", "Campaigns")">Budget & Pacing</a></li>
-                    <li><a href="@Url.Action("PerformanceGrid", "Campaigns")">Performance</a></li>
+                    <li><a href="@Url.Action("PacingGrid", "CampStats")">Budget & Pacing</a></li>
+                    <li><a href="@Url.Action("PerformanceGrid", "CampStats")">Performance</a></li>
                 </ul>
             </li>
             <li class="dropdown">
